--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,37 @@
-<h1>
+<nav class="navbar navbar-inverse">
+      <div class="container">
+        <div class="navbar-header">
+        <!-- 
+           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          -->
+          <a class="navbar-brand" href="#">Spotyfy app</a>
+        </div>
+        <div id="navbar" class="collapse navbar-collapse">
+          <ul class="nav navbar-nav">
+          </ul>
+        </div><!--/.nav-collapse -->
+      </div>
+    </nav>
+
+ <div class="container">
+   <div class="row">
+   <h1>
   {{title}}
 </h1>
+
+ </div>
+  <footer class="panel-footer">    
+   <p> <span class="text-muted">Tekijä: Petri Lamminaho</span> </p>
+   <p> <span class="text-muted"> Ota yhteytta: lammpe77@gmail.com </span> </p>    
+  </footer>
+</div>
+
+
+
+
+
