--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -2,11 +2,16 @@
 <nav class="navbar navbar-inverse">
       <div class="container">
         <div class="navbar-header">
-        
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
           
-        
+          
           <a class="navbar-brand" href="#">Spotyfy app</a>
         </div>
+              <div class="collapse navbar-collapse" id="navbar"  name="navbar">
                   <ul class="nav navbar-nav">
 
               <li class="active"><a href="#"> Pääsivu</a> </li>
@@ -14,6 +19,6 @@
              
           </ul>
         </div>
-      
+      </div>
     </nav>
 
