Navikointi sivustolla toivivaksi uusi parempi teema

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,26 +1,26 @@
-<app-navbar>
+<app-navbar>    </app-navbar>
 
-  </app-navbar>
+<div class="container">
+    <router-outlet> </router-outlet>
+</div>
+<div class="container">
 
- <div class="container">
-  
-   <div class="row">
-   <h1>
-  {{title}}
-</h1>
 
-<app-about>
 
-</app-about>
 
- </div>
+<!--
   <footer class="panel-footer">
    <p> <span class="text-muted">Tekijä: Petri Lamminaho</span> </p>
    <p> <span class="text-muted"> Ota yhteytta: lammpe77@gmail.com </span> </p>    
-  </footer>
+  </footer> -->
+<nav class = "navbar navbar-inverse navbar-fixed-bottom">
+    <div class="container">
+       <div class="navbar-text pull-left">
+            <p> &copy; 2017 Petri Lamminaho </p>
+        </div>
+       </div>
+    </nav>
+
+
 </div>
-
-
-
-
 
