--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,3 +1,12 @@
-<p>
-  about works!
-</p>
+
+ <div class="container">
+  
+   <div class="row">
+   <h1>
+  Tietoja sovelluksesta 
+</h1>
+
+
+
+ </div>  
+</div>
