--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -7,16 +7,12 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          
-          
           <a class="navbar-brand" href="#">Spotyfy app</a>
-        </div>
-              <div class="collapse navbar-collapse" id="navbar"  name="navbar">
-                  <ul class="nav navbar-nav">
-
-              <li class="active"><a href="#"> Pääsivu</a> </li>
-              <li> <a href="#about"> Tietoa</a> </li>
-             
+           </div>
+        <div class="collapse navbar-collapse" id="navbar"  name="navbar">
+            <ul class="nav navbar-nav">
+              <li> <a routerLink="search"> Haku</a> </li>
+              <li> <a routerLink="about"> Tietoa</a> </li>
           </ul>
         </div>
       </div>
