--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -1,3 +1,12 @@
-<p>
-  search works!
-</p>
+
+
+ <div class="container">
+  
+   <div class="row">
+   <h1>
+  Hae musaa
+</h1>
+
+ </div>  
+</div>
+
