Welcome component mukkan projektiin

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,22 +5,7 @@
 </div>
 <div class="container">
 
-
-
-
-<!--
-  <footer class="panel-footer">
-   <p> <span class="text-muted">Tekijä: Petri Lamminaho</span> </p>
-   <p> <span class="text-muted"> Ota yhteytta: lammpe77@gmail.com </span> </p>    
-  </footer> -->
-<nav class = "navbar navbar-inverse navbar-fixed-bottom">
-    <div class="container">
-       <div class="navbar-text pull-left">
-            <p> &copy; 2017 Petri Lamminaho </p>
-        </div>
-       </div>
-    </nav>
-
+ <app-footer>    </app-footer>
 
 </div>
 
