--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -7,6 +7,14 @@
   Hae musaa
 </h1>
 
+<form>
+<div class="form-group">
+  
+<input type= "text" name="searchStr" [(ngModel)] = "searchStr" (keyup)="haeMusaa()" class="form-control" placeholder="Hae musaa...">
+
+</div>
+</form>
+
  </div>  
 </div>
 
