--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -1,3 +1,9 @@
-<p>
-  welcome works!
-</p>
+<div class="container">
+<h1>
+Tervetuloa käyttämään Spotify-verkkosovellusta 
+</h1>
+<p>   Sovelluksen avulla voit hakea kiinostavaa musiikkia Spotyfy-palvelusta</p>
+
+<p> Aloita käyttö Haku-linkistä</p>
+</div>
+
