--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -15,6 +15,20 @@
 </div>
 </form>
 
- </div>  
+  <div *ngIf="hakutulokset">
+      <div *ngFor="let hakuTulos of hakutulokset">
+         <div class="row">
+           <div class="col-sm-12">
+             <div class="search-res well">
+               <h4><a href="#"> {{hakuTulos.name}}</a></h4>
+                 <div>
+                   <strong> Genret: </strong>
+                    <span *ngFor="let genre of hakuTulos.genres">{{genre}}  </span>
+            </div>
+           </div>
+         </div>
+        </div>
+      </div>
+   </div>  
 </div>
 
