Pienet muutokset Navbar kompoon ja pääsivulle

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -7,8 +7,8 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-        <a class="navbar-brand" routerLink="welcome">Spotyfy app</a> <!-- katso huom alhaalta   -->
-
+         <!-- katso huom alhaalta   -->
+          <a class="navbar-brand" href="#">Spotyfy app</a>
            </div>
 
         <div class="collapse navbar-collapse" id="navbar"  name="navbar">
@@ -23,7 +23,8 @@
 <!--
 Huom 
 
-jos käytetään routing.ts tiedossa  Welcome-kompon uudelleen ohjausta on käytettävä <a class="navbar-brand" href="#">Spotyfy app</a>
+jos käytetään routing.ts tiedossa  Welcome-kompon uudelleen ohjausta voidaan käytää  
+<a class="navbar-brand" routerLink="welcome">Spotyfy app</a> 
    Tämä tapa tosin toimii nytkin. 
    Ero:Lataa welcome sivun uudestaan palvelimelta(reload) kun painetaan linkkiä 
    Nyt Angular vain vaihtaa komponentin,  eikä lataa sitä palvelimelta 
