--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -2,8 +2,8 @@
 <h1>
 Tervetuloa käyttämään Spotify-verkkosovellusta 
 </h1>
-<p>   Sovelluksen avulla voit hakea kiinostavaa musiikkia Spotyfy-palvelusta</p>
+<p class="lead">   Sovelluksen avulla voit hakea kiinostavaa musiikkia Spotyfy-palvelusta</p>
 
-<p> Aloita käyttö Haku-linkistä</p>
+<p class="lead"> Aloita käyttö <a routerLink="../search"> Haku-linkistä</a></p>
 </div>
 
