--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -20,7 +20,7 @@
          <div class="row">
            <div class="col-sm-12">
              <div class="search-res well">
-               <h4><a href="#"> {{hakuTulos.name}}</a></h4>
+               <h4><a routerLink="/artist/{{hakuTulos.id}}"> {{hakuTulos.name}}</a></h4>
                  <div>
                    <strong> Genret: </strong>
                     <span *ngFor="let genre of hakuTulos.genres">{{genre}}  </span>
