--- a/src/app/artist/artist.component.html
+++ b/src/app/artist/artist.component.html
@@ -1,3 +1,20 @@
-<p>
-  artist works!
-</p>
+<div *ngIf="artist">
+    <header class="artist-header">
+        <div *ngIf="artist.images.length > 0">
+            <img class="artist-thumb img-circle" src="{{artist.images[0].url}}">    
+        </div>
+        <h1>{{artist.name}}</h1>
+        <p *ngIf="artist.genres.length > 0">
+            Genres: <span *ngFor="let genre of artist.genres">{{genre}}</span>
+        </p>
+    </header> 
+</div>
+
+
+
+
+<!-- 
+
+  <h2> {{artisti.name}}</h2>
+
+ -->
