--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,3 +1,5 @@
+<!--  <nav class = "navbar navbar-inverse navbar-fixed-bottom">  -->
+
 
 <nav class = "navbar navbar-inverse navbar-fixed-bottom">
     <div class="container">
