--- a/src/app/artist/artist.component.html
+++ b/src/app/artist/artist.component.html
@@ -1,11 +1,11 @@
-<div *ngIf="artist">
-    <header class="artist-header">
-        <div *ngIf="artist.images.length > 0">
-            <img class="artist-thumb img-circle" src="{{artist.images[0].url}}">    
+<div *ngIf="artisti">
+    <header class="artisti-header">
+        <div *ngIf="artisti.images.length > 0">
+            <img class="artisti-thumb img-circle" src="{{artisti.images[0].url}}">    
         </div>
-        <h1>{{artist.name}}</h1>
-        <p *ngIf="artist.genres.length > 0">
-            Genres: <span *ngFor="let genre of artist.genres">{{genre}}</span>
+        <h1>{{artisti.name}}</h1>
+        <p *ngIf="artisti.genres.length > 0">
+            Genres: <span *ngFor="let genre of artisti.genres">{{genre}}</span>
         </p>
     </header> 
 </div>
