--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -8,13 +8,13 @@
             <span class="icon-bar"></span>
           </button>
          <!-- katso huom alhaalta   -->
-          <a class="navbar-brand" href="#">Spotyfy app</a>
+          <a class="navbar-brand"  routerLink="/welcome">Spotyfy app</a>
            </div>
 
         <div class="collapse navbar-collapse" id="navbar"  name="navbar">
             <ul class="nav navbar-nav">
-              <li> <a routerLink="search"> Haku</a> </li>
-              <li> <a routerLink="about"> Tietoa</a> </li>
+              <li> <a routerLink="/search"> Haku</a> </li>
+              <li> <a routerLink="/about"> Tietoa</a> </li>
           </ul>
         </div>
       </div>
