--- a/src/app/artist/artist.component.html
+++ b/src/app/artist/artist.component.html
@@ -13,8 +13,8 @@
          <div class="row">
             <div *ngFor="let albumi of albumit">
               
-                <div class="col-sm-3">
-                    <div class="well album">
+                <div class="col-md-3">
+                    <div class="well-album">
                         <div *ngIf="albumi.images.length > 0">
                             <img class="album-thumb img-thumbnail" src="{{albumi.images[0].url}}">    
                             <h4>{{albumi.name}}</h4>
