--- a/src/app/album/album.component.html
+++ b/src/app/album/album.component.html
@@ -11,7 +11,7 @@
                 {{artist.name}}
                 </span></h4>
                 <h2>{{albumi.name}}</h2>
-                <h5>Release Date: {{albumi.release_date}}</h5>
+                <h5>Julkaisupäivä: {{albumi.release_date}}</h5>
                 <a class="btn btn-primary" target="_blank" href="{{albumi.external_urls.spotify}}">Kuuntele Spotifyssa</a> 
             </div>    
         </div>    
