--- a/src/app/artist/artist.component.css
+++ b/src/app/artist/artist.component.css
@@ -11,6 +11,19 @@
     height: auto;
    float:  auto;
     margin-left: 10px;
-    
 
 }
+    .well-album{
+        margin-bottom: 20px;
+        overflow: auto;
+        min-height: 400px;
+    }
+
+.album-thumb{
+    height: 100%
+}
+
+
+
+    
+
