About combonentiin sisältö

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,12 +1,39 @@
 
  <div class="container">
-  
    <div class="row">
-   <h1>
-  Tietoja sovelluksesta 
-</h1>
+  <div class="jumbotron">
+      <h1>Spotify app </h1>
+       <h2> Yksinkertainen Spotify verkkosovellus joka on toteutettu Angular alustalla  </h2>
+    </div>
+</div>
+      <div class="panel panel-primary">
+        <div class="panel-heading">
+          <h3>  Tekijä </h3>
+      </div> 
+       <div class="panel-body">
+       Petri Lamminaho
+       </div>
+       <div class="panel-heading">
+         <h3> Tekniikat</h3>
+        </div> 
+       <div class="panel-body">
+
+    <ul class="list-unstyled">
+
+      <li>Html5</li> 
+      <li> Angular 2</li>
+      <li> Bootstrap </li>
+      <li> Typescript </li>
+      <li> Spotify API </li>
+    </ul>
+       </div>
+ </div>
+ <footer class="footer">
+      <div class="container">
+       <p> <span class="text-muted"> &copy;  2017 Petri Lamminaho </span> </p>
+       <p> <span class="text-muted"> Ota yhteytta: lammpe77@gmail.com </span> </p>
+      </div>
+    </footer>
 
 
-
- </div>  
 </div>
