--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -8,7 +8,7 @@
             <span class="icon-bar"></span>
           </button>
          <!-- katso huom alhaalta   -->
-          <a class="navbar-brand"  routerLink="/welcome">Spotyfy app</a>
+          <a class="navbar-brand"  routerLink="/welcome">Spotify app</a>
            </div>
 
         <div class="collapse navbar-collapse" id="navbar"  name="navbar">
